--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -653,15 +653,21 @@ emission lines to calculate the proportion of the chosen Magnesium to
 the chosen Calcium peak, the low ratios still indicate lower
 concentrations than seen elsewhere, or seen only in aragonitic parts of
 e.g.~\emph{Patella} shells. Similar observations have been made before
-\citep{Graniero2017-io}.
+\citep{Graniero2017-io}. Strong intra-increment heterogeneities are
+visible along the exterior of the shells (m+3 layer), where Mg/Ca
+intensity ratios are higher, particularly in specimen ND-1016-3
+(Figure~\ref{fig-Nac_LIBS}). The step from lower to higher along the
+increment is not gradual, as is the case in NM-1016-3 (see inset of
+Figure~\ref{fig-Nac_LIBS} b), but rather step-wise. Sampling across this
+boundary in a linear scan would most likely lead to erroneous results.
+Also sampling across gradual changes as in NM-1016-3 can influence the
+overall correlation graph for a specimen.
 
 Line scans reflect well the changes previously indicated by
 \(\delta\)\textsuperscript{18}O values and also indicate about two years
 of recorded growth. That said, the 2D imaging suggests that in both
 specimens a third summer can be added to the total record, which is not
-captured by the line scans. The variability seen in the \emph{P.
-vulgata} specimens above is not as strong, which might also be related
-to the fast and consistent growth rate of the shells.
+captured by the line scans.
 
 Figure~\ref{fig-Nac_Comp} shows the line scans of ND-1016-3 and
 NM-1016-3 in comparison to their \(\delta\)\textsuperscript{18}O-values
@@ -679,7 +685,7 @@ recorded in the shells and its simple make-up.
 }
 
 \caption{\label{fig-Nac_Comp}Comparison of LIBS line-scan and sequential
-\(\delta\)\textsuperscript{18}O-values of specimen ORK-LT5}
+\(\delta\)\textsuperscript{18}O-values of \emph{Nacella} sp. specimens.}
 
 \end{figure}%
 
@@ -725,27 +731,26 @@ were high (\emph{P. vulgata mean R\textsuperscript{2}}=0.89, \emph{N.
 deaureata mean R\textsuperscript{2}}=0.86\emph{, N. magellanica mean
 R\textsuperscript{2}}=0.88). These results are similar to previously
 published data on \emph{Patella} sp. shells (Table
-\hyperref[Table_2]{2}). R\textsuperscript{2} values of \emph{P.
+\hyperref[Table_2]{2}): R\textsuperscript{2} values of \emph{P.
 depressa} lie between 0.78 and 0.87 \citep{Garcia-Escarzaga2021-ij}, for
 \emph{P. caerulea} from the Mediterranean between 0.78 and 0.96 ---
-although with one outlier of 0.33 (specimen MP64A), which had increased
-Mg/Ca ratios in increments with rich organic contents
-\citep{Hausmann2019-fi}.
+barring one outlier of 0.33 (specimen MP64A), which had increased Mg/Ca
+ratios in increments with rich organic contents \citep{Hausmann2019-fi}.
 
 \phantomsection\label{Table_2}
 \fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2778}}@{}}
-\caption{Table showing correlations of Mg/Ca and
-\(\delta\)\textsuperscript{18}O found in other studies. * indicates that
-only SST data and no other geochemical data was used. ** these samples
-were used to determine a shared R\textsuperscript{2}-value of
-0.79.}\tabularnewline
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1250}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1562}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1094}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2031}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.4062}}@{}}
+\caption{Correlations of Mg/Ca with \(\delta\)\textsuperscript{18}O and
+SST found in other studies. Bold R\textsuperscript{2} values are
+interpreted as outliers. * indicates that only SST data and no other
+geochemical data was used. ** these samples were used to determine a
+shared R\textsuperscript{2}-value of 0.79.}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Species
@@ -790,7 +795,7 @@ Study
 & & FRMPC1 & 0.84 & \\
 & & FRMPC2 & 0.96 & \\
 & Libya & MO31A & 0.83 & \\
-& & \textbf{MP64A} & 0.33 & \\
+& & \textbf{MP64A} & \textbf{0.33} & \\
 & & MP67A & 0.96 & \\
 & & MP68A & 0.81 & \\
 & Malta & MA10 & 0.82 & \\
@@ -800,7 +805,7 @@ Study
 & & ANTPC2 & 0.93 & \\
 & & KIZPC1 & 0.94 & \\
 & & KIZPC2 & 0.86 & \\
-\emph{P. rustica} & Gibraltar & \textbf{JL1} & 0.02 &
+\emph{P. rustica} & Gibraltar & \textbf{JL1} & \textbf{0.02} &
 \citep{Ferguson2011-zl} \\
 & & JL2 & 0.8** & \\
 \emph{P. caerulea} & Gibraltar & JM00 & 0.69** & \\
@@ -820,15 +825,16 @@ used determine a general Mg/Ca-SST relationship with an
 R\textsuperscript{2}-value of 0.79. JL1 was disregarded in that
 calculation, as well as the second year of growth in JM00, which
 produced anomalous data. While no additional information about those
-specimens is available, it seems likely that the Mg/Ca ratios from JM00,
-which were interpreted as an ontogenetic trend, were potentially
-influenced by the same intra-increment heterogeneity we see in some of
-our shell specimens as well. Since these shells were analysed by
-homogenising the carbonate powder of the m+2 layer and the more exterior
-m+3 layer, these heterogeneities could potentially increased the Mg/Ca
-ratio unpredictably, leading to what might look like an ontogenetic
-trend in a linear dataset. Whether these anomalies affected JL1 in the
-same way, albeit stronger, is not clear but it might well be possible.
+specimens is available, it seems likely that discarded the Mg/Ca ratios
+from JM00, which were interpreted as an ontogenetic trend, were
+potentially influenced by the same intra-increment heterogeneity we see
+in some of our shell specimens as well. Since these shells were analysed
+by homogenising the carbonate powder of the m+2 layer and the more
+exterior m+3 layer, these heterogeneities could potentially increased
+the Mg/Ca ratio unpredictably, leading to what might look like an
+ontogenetic trend in a linear dataset. Whether these anomalies affected
+JL1 in the same way, albeit stronger, is not clear but it might well be
+possible.
 
 \begin{figure}
 
@@ -838,27 +844,27 @@ same way, albeit stronger, is not clear but it might well be possible.
 
 }
 
-\caption{\label{fig-Ferg}Correlation graphs for Ferguson et al., 2011
+\caption{\label{fig-Ferg}Correlation graphs for Ferguson et al., (2011)
 specimens.}
 
 \end{figure}%
 
-Another shell whose previous results we aim to explain further is
-ORK-LT5, which has previously been shown to have no substantial
-correlation with \(\delta\)\textsuperscript{18}O or SST in implication
+Another shell whose results we aim to explain further is ORK-LT5, which
+has previously been shown to have no substantial correlation with
+\(\delta\)\textsuperscript{18}O or SST in implication
 \citep{Graniero2017-io}. Different to other specimens of this study, we
-were able to resample this specimen and getting Mg/Ca data on a slightly
-higher resolution (20--30 µm spots in a 100 µm raster compared to 50 µm
-spots spaced at 150--300 µm) and using 2 dimensions, as well as using a
-continuous high-resolution line-scan at (20--30 µm spots spaced at 10
-µm) (Figure~\ref{fig-ORK_sub}). These additional data revealed
+were able to resample this specimen and to acquire Mg/Ca data on a
+slightly higher resolution (20--30 µm spots in a 100 µm raster compared
+to 50 µm spots spaced at 150--300 µm) and using 2 dimensions, as well as
+using a continuous high-resolution line-scan at (20--30 µm spots spaced
+at 10 µm) (Figure~\ref{fig-ORK_sub}). These additional data revealed
 previously missed summer peaks at around 2--3 mm distance to the shell
 edge (grey box in Figure~\ref{fig-ORK_sub}) and revealed additional
 growth at the very edge (dashed box in Figure~\ref{fig-ORK_sub})
 mirroring the change towards warmer temperatures at the time of
 collection (August). Including these missing parts lead to a better
 alignment of both records and a resulting R\textsuperscript{2}-value of
-0.88.
+0.88 (Figure~\ref{fig-ORK_sub}).
 
 \begin{figure}
 
@@ -874,27 +880,31 @@ and \(\delta\)\textsuperscript{18}O-values}
 
 \end{figure}%
 
-While we were not able to resample the \emph{Nacella} sp. specimens in
-Graniero \emph{et al.} \citeyearpar{Graniero2017-io}, we were able to
-source other modern and archaeological specimens of the same species
-from Tierra del Fuego, which can serve as an indicator. Similar to other
-patelloid shells, the results of the \emph{Nacella} specimens in our
-study were successful with high R\textsuperscript{2}-values (0.76--0.95)
-and suggest Mg/Ca as a reliable proxy for SST (Figure~\ref{fig-Nac_Comp}
-and supplementaries). Why these results are different from the studied
-\emph{Nacella} sp. specimens in Graniero et al.
-\citeyearpar{Graniero2017-io} is not obvious, but the occasional
-alignment of the Mg/Ca and \(\delta\)\textsuperscript{18}O records of
-their shells (Figure 6 in \citep{Graniero2017-io} ) indicate that there
-is some relationship that --- potentially due to the low sampling
-resolution or intra-increment heterogeneity --- fell apart and lead to
-an overall result of an uncorrelated relationship between Mg/Ca and SST.
+We were not able to resample the \emph{Nacella} sp. specimens in
+Graniero \emph{et al.} \citeyearpar{Graniero2017-io}, which had
+similarly unrelated records of \(\delta\)\textsuperscript{18}O and Mg/Ca
+and pointed to no relationship between elemental ratios and SST at all.
+However, we were able to source other modern specimens of the same
+species from Tierra del Fuego, which shall serve here as an indicator.
+Similar to other patelloid shells, the results of the \emph{Nacella}
+specimens in our study were successful with high
+R\textsuperscript{2}-values (0.76--0.95) and suggest Mg/Ca as a reliable
+proxy for SST (Figure~\ref{fig-Nac_Comp} and supplementaries). Why these
+results are different from the studied \emph{Nacella} sp. specimens in
+Graniero \emph{et al}. \citeyearpar{Graniero2017-io} is not obvious, but
+the occasional alignment of the Mg/Ca and
+\(\delta\)\textsuperscript{18}O records of their shells (Figure 6 in
+Graniero \emph{et al}. \citeyearpar{Graniero2017-io}) indicate that
+there is some relationship that --- potentially due to the low sampling
+resolution or intra-increment heterogeneity --- is not perfectly
+visible, leading to an overall result of an uncorrelated relationship
+between Mg/Ca and SST.
 
 \section{Conclusion}\label{conclusion}
 
 This study presents high-resolution and 2D information on Mg/Ca
 concentrations in modern and archaeological patelloid shells and their
-relation to sea surface temperature. The results for \emph{Patella
+relationship to sea surface temperature. The results for \emph{Patella
 vulgata}, \emph{Nacella deaureata}, and \emph{Nacella magellanica} were
 consistently promising with mean R\textsuperscript{2}-values of 0.89,
 0.86, and 0.88 respectively.
@@ -912,13 +922,15 @@ patelloid shells for the study of season of collection in archaeological
 sites as well as the reconstruction of sub-annual climatic conditions in
 the past. Shells of the species studied here are widely available along
 the European Atlantic façade and the Argentinian coastline and make up a
-large part of marine mollusc remains in archaeological sites of those
-regions. Improving their analysis in terms of cost and time efficiency
-through the benefits of LIBS, which can be used in this context as a
-screening tool for targeted \(\delta\)\textsuperscript{18}O analysis
-focusing on annual minima and maxima revealed in the Mg/Ca record,
-allows researchers to increase sample numbers and produce larger and
-more in-depth climatic studies than previously possible.
+significant part of marine mollusc remains in archaeological sites of
+those regions
+\citep{Colonese2011-ab, Villagran2011-ld, Zangrando2016-yl}. Improving
+their analysis in terms of cost and time efficiency through the benefits
+of LIBS, which can be used in this context as a screening tool for
+targeted \(\delta\)\textsuperscript{18}O analysis focusing on annual
+minima and maxima revealed in the Mg/Ca record, will allow researchers
+to increase sample numbers and produce larger and more in-depth climatic
+studies than previously possible.
 
 
 \renewcommand\refname{References}
