--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5737,7 +5737,7 @@
 
 @ARTICLE{Wanamaker2008-zl,
   title       = "Experimentally determined {Mg/Ca} and {Sr/Ca} ratios in
-                 juvenile bivalve calcite for Mytilus edulis: implications for
+                 juvenile bivalve calcite for \textit{Mytilus edulis}: implications for
                  paleotemperature reconstructions",
   author      = "Wanamaker, Jr, Alan D and Kreutz, Karl J and Wilson, Tiffany
                  and Borns, Jr, Harold W and Introne, Douglas S and Feindel,
@@ -9058,9 +9058,9 @@
 }
 
 @ARTICLE{Freitas2012-tx,
-  title       = "The potential of combined {Mg/Ca} and {$\delta$18O}
-                 measurements within the shell of the bivalve Pecten maximus to
-                 estimate seawater {$\delta$18O} composition",
+  title       = "The potential of combined {Mg/Ca} and {$\delta^{18}$O}
+                 measurements within the shell of the bivalve \textit{Pecten maximus} to
+                 estimate seawater {$\delta^{18}$O} composition",
   author      = "Freitas, Pedro S and Clarke, Leon J and Kennedy, Hilary and
                  Richardson, Christopher A",
   journal     = "Chem. Geol.",
@@ -9241,7 +9241,7 @@
 }
 
 @ARTICLE{Garcia-Escarzaga2018-jv,
-  title       = "Growth patterns of the topshell Phorcus lineatus (da Costa,
+  title       = "Growth patterns of the topshell \textit{Phorcus lineatus} (da Costa,
                  1778) in northern Iberia deduced from shell sclerochronology",
   author      = "Garc{\'\i}a-Esc{\'a}rzaga, Asier and Guti{\'e}rrez-Zugasti,
                  Igor and Sch{\"o}ne, Bernd R and Cobo, Adolfo and
@@ -15001,7 +15001,7 @@
 
 @ARTICLE{Nicastro2020-ih,
   title   = "High-resolution records of growth temperature and life history of
-             two Nacella limpet species, Tierra del Fuego, Argentina",
+             two \textit{Nacella} limpet species, Tierra del Fuego, Argentina",
   author  = "Nicastro, Adam and Surge, Donna and Briz i Godino, Ivan and
              {\'A}lvarez, Myrian and Sch{\"o}ne, Bernd R and Bas, Maria",
   journal = "Palaeogeogr. Palaeoclimatol. Palaeoecol.",
@@ -15343,7 +15343,7 @@
 }
 
 @ARTICLE{Ortiz2015-xp,
-  title       = "Protein diagenesis in Patella shells: Implications for amino
+  title       = "Protein diagenesis in \textit{Patella} shells: Implications for amino
                  acid racemisation dating",
   author      = "Ortiz, Jos{\'e} E and Guti{\'e}rrez-Zugasti, Igor and Torres,
                  Trinidad and Gonz{\'a}lez-Morales, Manuel and
@@ -15360,7 +15360,7 @@
 }
 
 @ARTICLE{Ortiz2015-mr,
-  title   = "Protein diagenesis in Patella shells: Implications for amino acid
+  title   = "Protein diagenesis in \textit{Patella} shells: Implications for amino acid
              racemisation dating",
   author  = "Ortiz, Jos{\'e} E and Guti{\'e}rrez-Zugasti, Igor and Torres,
              Trinidad and Gonz{\'a}lez-Morales, Manuel and
@@ -18363,8 +18363,8 @@
 }
 
 @ARTICLE{Garcia-Escarzaga2018-dv,
-  title       = "{Mg/Ca} profiles within archaeological mollusc (Patella
-                 vulgata) shells: {Laser-Induced} Breakdown Spectroscopy
+  title       = "{Mg/Ca} profiles within archaeological mollusc (\textit{Patella
+                 vulgata}) shells: {Laser-Induced} Breakdown Spectroscopy
                  compared to Inductively Coupled {Plasma-Optical} Emission
                  Spectrometry",
   author      = "Garc{\'\i}a-Esc{\'a}rzaga, Asier and Clarke, Leon J and
@@ -18382,7 +18382,7 @@
 }
 
 @ARTICLE{Garcia-Escarzaga2018-we,
-  title   = "{Mg/Ca} profiles within archaeological mollusc (Patella vulgata)
+  title   = "{Mg/Ca} profiles within archaeological mollusc (\textit{Patella vulgata})
              shells: {Laser-Induced} Breakdown Spectroscopy compared to
              Inductively Coupled {Plasma-Optical} Emission Spectrometry",
   author  = "Garc{\'\i}a-Esc{\'a}rzaga, Asier and Clarke, Leon J and
@@ -18876,7 +18876,7 @@
 }
 
 @ARTICLE{Martinez-Minchero2022-jz,
-  title     = "Comparison of {Mg/Ca} concentration series from Patella depressa
+  title     = "Comparison of {Mg/Ca} concentration series from \textit{Patella depressa}
                limpet shells using {CF-LIBS} and {LA-ICP-MS}",
   author    = "Mart{\'\i}nez-Minchero, Marina and Cobo, Adolfo and
                M{\'e}ndez-Vicente, Ana and Pisonero, Jorge and Bordel, Nerea
@@ -20743,7 +20743,7 @@
 
 @ARTICLE{Fenger2007-tl,
   title     = "Sclerochronology and geochemical variation in limpet shells
-               (Patella vulgata): A new archive to reconstruct coastal sea
+               (\textit{Patella vulgata}): A new archive to reconstruct coastal sea
                surface temperature",
   author    = "Fenger, Tracy and Surge, Donna and Sch{\"o}ne, Bernd and Milner,
                Nicky",
@@ -20777,7 +20777,7 @@
 
 @ARTICLE{Surge2008-ri,
   title       = "Evaluating {Mg/Ca} ratios as a temperature proxy in the
-                 estuarine oyster, Crassostrea virginica",
+                 estuarine oyster, \textit{Crassostrea virginica}",
   author      = "Surge, Donna and Lohmann, Kyger C",
   journal     = "J. Geophys. Res.",
   publisher   = "Wiley Online Library",
@@ -34978,8 +34978,8 @@
 }
 
 @ARTICLE{Garcia-Escarzaga2021-ij,
-  title     = "Using {Mg/Ca} Ratios from the Limpet Patella depressa Pennant,
-               1777 Measured by {Laser-Induced} Breakdown Spectroscopy ({LIBS})
+  title     = "Using {Mg/Ca} Ratios from the Limpet \textit{Patella depressa} (Pennant,
+               1777) Measured by {Laser-Induced} Breakdown Spectroscopy ({LIBS})
                to Reconstruct Paleoclimate",
   author    = "Garc{\'\i}a-Esc{\'a}rzaga, Asier and Mart{\'\i}nez-Minchero,
                Marina and Cobo, Adolfo and Guti{\'e}rrez-Zugasti, Igor and
@@ -37185,13 +37185,13 @@
   issn      = "1354-1013"
 }
 
-@INBOOK{Robson2023-oz,
-  title     = "Shell middens",
-  booktitle = "Encyclopedia of Archaeology, 2nd Edition",
-  author    = "Robson, H K and Hausmann, N and Milner, N",
-  editor    = "Nikita, E and Rehren, T",
-  publisher = "Elsevier",
-  year      =  2023
+@incollection{Robson2023-oz,
+  title={Shell middens},
+  author={Robson, Harry Kenneth and Hausmann, Niklas Benedict Marius Johannes and Milner, Nicky},
+  booktitle={Encyclopedia of Archaeology},
+  pages={58--70},
+  year={2024},
+  publisher={Academic Press}
 }
 
 @ARTICLE{Speth2012-ze,
@@ -38228,7 +38228,7 @@
 @ARTICLE{Wanamaker2009-mj,
   title       = "A novel method for imaging internal growth patterns in marine
                  mollusks: A fluorescence case study on the aragonitic shell of
-                 the marine bivalve Arctica islandica(Linnaeus)",
+                 the marine bivalve \textit{Arctica islandica} (Linnaeus)",
   author      = "Wanamaker, Jr, Alan D and Baker, Andy and Butler, Paul G and
                  Richardson, Christopher A and Scourse, James D and Ridgway,
                  Iain and Reynolds, David J",
@@ -38551,7 +38551,7 @@
 
 @ARTICLE{Fenger2007-gf,
   title   = "Sclerochronology and geochemical variation in limpet shells (
-             Patella vulgata): A new archive to reconstruct coastal sea surface
+             \textit{Patella vulgata}): A new archive to reconstruct coastal sea surface
              temperature",
   author  = "Fenger, Tracy and Surge, Donna and Sch{\"o}ne, Bernd and Milner,
              Nicky",
@@ -42296,7 +42296,7 @@
 @ARTICLE{Schone2010-yl,
   title       = "Effect of organic matrices on the determination of the trace
                  element chemistry (Mg, Sr, {Mg/Ca}, {Sr/Ca}) of aragonitic
-                 bivalve shells (Arctica islandica)---Comparison of {ICP-OES}
+                 bivalve shells (\textit{Arctica islandica})---Comparison of {ICP-OES}
                  and {LA-ICP-MS} data",
   author      = "Sch{\"o}ne, Bernd R and Zhang, Zengjie and Jacob, Dorrit and
                  Gillikin, David P and T{\"u}tken, Thomas and
@@ -42890,7 +42890,7 @@
 @ARTICLE{Wang2012-en,
   title       = "Seasonal temperature variability of the Neoglacial (3300--2500
                  {BP}) and Roman Warm Period (2500--1600 {BP}) reconstructed
-                 from oxygen isotope ratios of limpet shells (Patella vulgata),
+                 from oxygen isotope ratios of limpet shells (\textit{Patella vulgata}),
                  Northwest Scotland",
   author      = "Wang, Ting and Surge, Donna and Mithen, Steven",
   journal     = "Palaeogeogr. Palaeoclimatol. Palaeoecol.",
